--- a/index.html
+++ b/index.html
@@ -58,10 +58,13 @@
                 <h1>Bienvenidos a Ventas Rubi</h1>
                 <hr>
                 <p>Tienda de cosmeticos y fragancias</p>
-                <button class="abajo">Ver abajo</button>
+                <button id="abajo">Ver abajo</button>
             </div>
-
+            
+            <div class="skew-abajo"></div>
         </div>
+
+
 
         <!-- IMG HEADER -->
 
@@ -96,6 +99,7 @@
     <!-- Proyectos -->
     <header id="proyectos">
         <section class="our-projects">
+            <div class="skew-arriba"></div>
 
             <div class="deg-background"></div>
 
@@ -124,6 +128,7 @@
                 </div>
 
             </div>
+            <div class="skew-abajo"></div>
 
         </section>
     </header>
@@ -173,6 +178,7 @@
     <!-- Footer -->
     <header id="footer">
     <footer class="footer">
+        <div class="skew-arriba"></div>
 
         <div class="deg-footer"></div>
         <div class="ejeZfooter">
